--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,5 @@ PORT=5000
 HOST=localhost
 USER=root
 PASSWORD=
-DATABASE=p7_db
+DATABASE=groupomania_db
 TOKEN_SECRET=+r+JX!dFhp~L[2N*Pc%@4U!v.c>aDZdT@G-Ppq(BaBc4,m#p6(8de->J<;*%k7zS
